13-May-2013 OpusOptionCodeGenerator no longer throws an exception when an interface with no properties is used.

07-May-2013 Each package included into a build now adds a preprocessor definition of OPUSPACKAGE_<name>_<version>. Name and version are converted to upper case. Periods and dashes are replaced with underscores.

24-Apr-2013 Opus.Core.File.GetFiles() can now search through directories (last path segment is a directory) and also returns the common directory for all files found.

20-Apr-2013 Adding support for VisualStudio 2012, package VisualC-11.0

20-Apr-2013 Generalizing Opus.Core.Win32RegistryUtilities access and adding accessors to the current user area. If you used any functions from this before, finding 32-bit registry keys is now more explicit.

15-Apr-2013 Package assembly re-use now includes a hash of the Opus assemblies.

09-Apr-2013 Added -explain action to the NativeBuilder, which will output an explaination of why files are built, at the current verbosity level.

09-Apr-2013 Release 0.50 Alpha 4

08-Apr-2013 Added -ih option to OpusOptionCodeGenerator to ignore header updates to the delegates file. This allows updating option files on different platforms.

08-Apr-2013 Added C.ILinkerOptions.OSXFrameworks Opus.Core.StringArray option, to list the names of frameworks to link against.

05-Apr-2013 Replaced C.OSXAppBundle module type, with a Boolean option on C.ILinkerOptions, called OSXApplicationBundle (defaults to false). Module type for bundles should now just be C.Application or C.WindowsApplication, which merges better with non-OSX platforms.

04-Apr-2013 Marked XmlUtilities' plist options properties as state only, and auto-generated support files

04-Apr-2013 OpusOptionCodeGenerator now recognizes a comment // StateOnly above a property in an interface file to indicate that the property has no delegates to register.

03-Apr-2013 Added help to OpusOptionCodeGenerator if no arguments are passed.
